--- a/package.json
+++ b/package.json
@@ -8,9 +8,7 @@
 		"handlebars": "2.0.0",
 		"express-handlebars": "1.1.0",
 		"async": "*",
-		"waterskulls": "giuocob/ProjectWaterskulls"
-	},
-	"devDependencies": {
+		"waterskulls": "giuocob/ProjectWaterskulls",
 		"grunt": "~0.4.5",
 		"grunt-contrib-less": "~0.11.3",
 		"grunt-contrib-copy": "~0.5.0"
