--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
-	"name": "webiste-bingo",
-	"version": "0.0.1",
-	"private": true,
-	"dependencies": {
-		"express": "4.11.1",
-		"body-parser": "1.10.2",
-		"handlebars": "2.0.0",
-		"express-handlebars": "1.1.0",
-		"async": "*",
-		"waterskulls": "giuocob/ProjectWaterskulls",
-		"grunt": "~0.4.5",
-		"grunt-contrib-less": "~0.11.3",
-		"grunt-contrib-copy": "~0.5.0"
-	}
+  "name": "webiste-bingo",
+  "version": "0.0.1",
+  "private": true,
+  "dependencies": {
+    "async": "*",
+    "body-parser": "1.10.2",
+    "express": "4.11.1",
+    "express-handlebars": "1.1.0",
+    "extend": "^3.0.0",
+    "grunt": "~0.4.5",
+    "grunt-contrib-copy": "~0.5.0",
+    "grunt-contrib-less": "~0.11.3",
+    "handlebars": "2.0.0",
+    "waterskulls": "giuocob/ProjectWaterskulls"
+  }
 }
