--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "grunt-contrib-copy": "~0.5.0",
     "grunt-contrib-less": "~0.11.3",
     "handlebars": "2.0.0",
-    "waterskulls": "giuocob/ProjectWaterskulls"
+    "query-string": "^4.1.0",
+    "request": "^2.69.0",
+    "waterskulls": "giuocob/ProjectWaterskulls",
+    "xerror": "^1.1.1"
   }
 }
